--- a/src/app/components/ComponentsList/ComponentItem/ComponentItem.module.css
+++ b/src/app/components/ComponentsList/ComponentItem/ComponentItem.module.css
@@ -3,18 +3,34 @@
   flex-direction: column;
   gap: 1rem;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 
   padding: 1rem;
 
-  background-color: var(--tailwind-color-darker);
+  background-color: #fff;
+  border-radius: 4px;
 }
 
-.item__author_username {
-  font-weight: bold;
+.item__footer__author_username {
+  font-weight: 600;
+  font-size: 0.8rem;
+  color: #000;
+
+  background-color: transparent;
 }
 
 .item__preview {
-  margin: 2rem auto;
-  border: 2px solid #000;
+  height: 100%;
+  box-shadow: 1px 4px 15px #0003;
+  padding: 1rem;
+
+  border-radius: 4px;
+}
+
+.item__footer {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: space-between;
 }
