--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,11 +27,14 @@ body {
 
 a {
   color: inherit;
-  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 button {
-  padding: 0.5rem 1rem;
+  padding: 0.8rem 1.2rem;
   border-radius: 4px;
   border: none;
   outline: none;
