--- a/src/app/components/shared/Search/Search.module.css
+++ b/src/app/components/shared/Search/Search.module.css
@@ -1,7 +1,8 @@
 .search_container {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   gap: 1rem;
 
   max-width: 800px;
@@ -18,8 +19,10 @@
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   font-size: 1rem;
+  color: #000;
 }
 
 .filters_list__option {
   font-size: 1rem;
+  color: #000;
 }
