[FEAT]: replace tailwind stylesheet with play cdn script

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,6 +44,24 @@ button {
 input {
   max-width: 100%;
   border: none;
+
+  padding: 0.5rem 1rem;
+  background-color: #fff !important;
+  color: #000 !important;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: none;
+  -webkit-text-fill-color: #000;
+  background-color: #fff;
 }
 
 @media screen and (max-width: 768px) {
