--- a/src/app/editor/components/CodeEditor/CodeEditor.module.css
+++ b/src/app/editor/components/CodeEditor/CodeEditor.module.css
@@ -10,6 +10,12 @@
   margin: 2rem auto;
 }
 
+.codePreview {
+  background-color: #fff;
+  padding: 0.8rem;
+  width: 100%;
+}
+
 .login_btn {
   display: flex;
   justify-content: center;
@@ -36,4 +42,11 @@
 
 .publish_btn:hover {
   background-color: var(--tailwind-color);
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
 }
