--- a/src/app/components/ComponentsList/ComponentsList.module.css
+++ b/src/app/components/ComponentsList/ComponentsList.module.css
@@ -1,6 +1,6 @@
 .components_list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(350px, 100%), 1fr));
   gap: 1rem;
 
   width: 100%;
