[DEV]: replace next Image component with img tag
Also, remove @next/next/no-img-element eslint rule

--- a/src/app/components/ComponentsList/ComponentItem/ComponentItem.module.css
+++ b/src/app/components/ComponentsList/ComponentItem/ComponentItem.module.css
@@ -38,7 +38,7 @@
   justify-content: center;
   align-items: center;
 
-  background-color: #fff;
+  background-color: #000;
   padding: 2rem 1rem;
   overflow: auto;
 
