--- a/src/app/components/ComponentsList/ComponentItem/ComponentItem.module.css
+++ b/src/app/components/ComponentsList/ComponentItem/ComponentItem.module.css
@@ -7,7 +7,6 @@
   align-self: stretch;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   align-items: stretch;
   justify-content: space-between;
 
@@ -33,20 +32,9 @@
   border-radius: 50%;
 }
 
-.item__preview {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  background-color: #000;
-  padding: 2rem 1rem;
-  overflow: auto;
-
+.item__preview_img {
+  width: 100%;
   border-radius: 4px;
-}
-
-.item__preview div {
-  height: fit-content;
 }
 
 .item__footer {
