--- a/src/app/editor/components/CodeEditor/CodeEditor.module.css
+++ b/src/app/editor/components/CodeEditor/CodeEditor.module.css
@@ -1,52 +1,43 @@
 .editorContainer {
+  height: 60vh;
+  max-height: 60vh;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
 
   padding: 1rem;
   margin: 2rem auto;
 }
 
-.codePreview {
+.previewContainer {
+  position: relative;
+}
+
+.previewContainer__codePreview {
   background-color: #fff;
+  color: #000;
   padding: 0.8rem;
   width: 100%;
+  height: 100%;
+  overflow: auto;
 }
 
-.login_btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-
-  background-color: #000;
-  transition: background-color 0.2s ease-out;
+.previewContainer__publishButton {
+  background-color: #fff;
+  padding: 0.5rem 1rem;
+  border-radius: 6px;
+  color: #000;
+  box-shadow: 0 5px 10px rgb(0 0 0 / 0.25);
+  position: absolute;
+  bottom: 0.5rem;
+  right: 0.5rem;
 }
 
-.login_btn:hover {
-  background-color: #111;
+.previewContainer__publishButton:hover {
+  box-shadow: 0 5px 15px rgb(0 0 0 / 0.25);
 }
 
-.publish_btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-
-  background-color: var(--tailwind-color-darker);
-  transition: background-color 0.2s ease-out;
-}
-
-.publish_btn:hover {
-  background-color: var(--tailwind-color);
-}
-
-.form {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  gap: 1rem;
+.editor {
+  height: 100%;
 }
