--- a/src/app/editor/components/CodeEditor/CodeEditor.module.css
+++ b/src/app/editor/components/CodeEditor/CodeEditor.module.css
@@ -1,6 +1,7 @@
 .editorContainer {
   height: 60vh;
   max-height: 60vh;
+  overflow: auto;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -12,15 +13,17 @@
 
 .previewContainer {
   position: relative;
-}
-
-.previewContainer__codePreview {
+  overflow: auto;
   background-color: #fff;
   color: #000;
   padding: 0.8rem;
+}
+
+.previewContainer__codePreview {
   width: 100%;
   height: 100%;
-  overflow: auto;
+  display: grid;
+  place-content: center;
 }
 
 .previewContainer__publishButton {
