--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,7 +22,7 @@ html {
 
 body {
   max-width: 1400px;
-  margin: 0 auto;
+  margin: 0 auto !important;
 }
 
 a {
@@ -62,6 +62,11 @@ select:-webkit-autofill:focus {
   border: none;
   -webkit-text-fill-color: #000;
   background-color: #fff;
+}
+
+img {
+  max-width: 100%;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 768px) {
