--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,9 @@
 
   --tailwind-color: #4fd1c5;
   --tailwind-color-darker: #38a89d;
+
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 html {
@@ -39,6 +42,7 @@ button {
   border: none;
   outline: none;
   cursor: pointer;
+  background-color: transparent;
 }
 
 input {
