--- a/src/app/components/ComponentsList/ComponentItem/ComponentItemNavBar/ComponentItemNavBar.module.css
+++ b/src/app/components/ComponentsList/ComponentItem/ComponentItemNavBar/ComponentItemNavBar.module.css
@@ -1,7 +1,7 @@
 .item_navbar {
   display: flex;
   flex-wrap: wrap;
-  justify-content: end;
+  justify-content: flex-end;
   gap: 0.5rem;
   align-items: center;
 }
