--- a/src/app/editor/components/CodeEditor/CodeEditor.module.css
+++ b/src/app/editor/components/CodeEditor/CodeEditor.module.css
@@ -1,8 +1,8 @@
-.editorContainer {
-  height: 60vh;
-  max-height: 60vh;
-  overflow: auto;
+.container {
+  overflow: hidden;
+  max-width: 100%;
   width: 100%;
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
@@ -11,19 +11,13 @@
   margin: 2rem auto;
 }
 
-.previewContainer {
-  position: relative;
-  overflow: auto;
+.codePreview {
+  width: 100%;
+  max-height: 100vh;
+  overflow: scroll;
   background-color: #fff;
   color: #000;
   padding: 0.8rem;
-}
-
-.previewContainer__codePreview {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  place-content: center;
 }
 
 .previewContainer__publishButton {
@@ -42,5 +36,11 @@
 }
 
 .editor {
-  height: 100%;
+  width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
 }
