--- a/src/app/editor/components/EditorSection/EditorSection.module.css
+++ b/src/app/editor/components/EditorSection/EditorSection.module.css
@@ -1,10 +1,12 @@
 .editor_section {
+  width: 100vw;
+  height: 100vh;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
+  align-items: stretch;
+  justify-content: stretch;
+  position: relative;
 }
 
 .editor_section__form_section {
@@ -14,4 +16,6 @@
   justify-content: center;
   width: 100%;
   height: 100%;
+  position: absolute;
+  display: none;
 }
