--- a/src/app/editor/components/CodeEditorForm/CodeEditorForm.module.css
+++ b/src/app/editor/components/CodeEditorForm/CodeEditorForm.module.css
@@ -1,7 +1,7 @@
 .publish_btn {
   display: flex;
   justify-content: center;
-  padding: 1rem 2rem;
+  padding: 0.5rem 1rem;
   align-items: center;
   gap: 0.5rem;
 
@@ -14,22 +14,28 @@
 }
 
 .form {
-  max-width: 600px;
   display: flex;
+  align-items: center;
   justify-content: center;
-  flex-direction: column;
   gap: 1rem;
+  background-color: #000;
+  padding: 1rem;
+  border-radius: 4px;
 }
 
 .input {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  pad: 0.5rem 1rem;
+  padding: 0.5rem 1rem;
   border-radius: 4px;
 }
 
 .label {
-  font-size: 1.2rem;
-  font-weight: 600;
+  font-size: 1rem;
+}
+
+.form__open_form_button {
+  padding: 0.5rem 1rem;
+  background-color: var(--tailwind-color-darker);
 }
