--- a/src/app/editor/components/EditorSection/EditorSection.module.css
+++ b/src/app/editor/components/EditorSection/EditorSection.module.css
@@ -14,8 +14,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  display: none;
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
 }
