--- a/src/app/components/Hero/Hero.module.css
+++ b/src/app/components/Hero/Hero.module.css
@@ -1,42 +1,73 @@
 .hero {
-  background-image: linear-gradient(
-    to bottom,
-    var(--primary-color),
-    var(--secondary-color)
-  );
-
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   gap: 2rem;
   padding: 5rem 1rem;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  text-align: center;
+.main {
+  width: 60%;
+  padding: 1rem;
+}
+
+.images {
+  width: 40%;
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+}
+
+.images img {
+  width: 80%;
+  height: 80%;
+  max-width: 200px;
+  border-radius: 0.5rem;
+}
+
+.images img:nth-child(1) {
+  justify-self: end;
+  align-self: end;
+}
+
+.images img:nth-child(2) {
+  transform: translateY(30%);
+  justify-self: start;
+  align-self: end;
+}
+
+.images img:nth-child(3) {
+  justify-self: end;
+  align-self: start;
+}
+
+.images img:nth-child(4) {
+  transform: translateY(30%);
+  justify-self: start;
+  align-self: start;
 }
 
 .title {
-  font-size: 2.5rem;
+  font-size: 4rem;
   font-weight: bold;
-  color: #fff;
+  max-width: 100%;
 }
 
 .subtitle {
-  font-size: 1.2rem;
-  margin-top: 2rem;
-  margin-bottom: 4rem;
-  color: #fff;
+  font-size: 1.5rem;
+  margin: 1rem auto 2rem;
 }
 
 .button {
-  background-color: var(--tailwind-color);
+  display: block;
+  width: fit-content;
+  background-color: var(--dark-brown);
   color: #fff;
   border-radius: 9999px;
-  padding: 1rem 2rem;
+  padding: 0.8rem 1.5rem;
   font-size: 1rem;
   font-weight: bold;
   border: none;
@@ -45,5 +76,41 @@
 }
 
 .button:hover {
-  background-color: var(--tailwind-color-darker);
+  background-color: var(--light-brown);
+}
+
+@media screen and (max-width: 768px) {
+  .hero {
+    flex-direction: column;
+    gap: 1rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .button {
+    margin: 0 auto;
+    font-size: 1rem;
+  }
+
+  .title {
+    font-size: 2.5rem;
+  }
+
+  .subtitle {
+    font-size: 1.2rem;
+  }
+
+  .main,
+  .images {
+    width: 100%;
+  }
+
+  .main {
+    text-align: center;
+    padding: 0;
+  }
+
+  .images img {
+    max-width: 100px;
+  }
 }
