--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,14 +5,16 @@
 }
 
 :root {
-  background-color: #111;
-  color: #fff;
+  background-color: #f9f4ec;
+  color: #000;
 
-  --primary-color: #1a202c;
-  --secondary-color: #16428f;
+  /* --primary-color: #1a202c; */
+  /* --secondary-color: #16428f; */
+  --primary-color: #f9f4ec;
+  --secondary-color: #e3d4d0;
 
-  --tailwind-color: #4fd1c5;
-  --tailwind-color-darker: #38a89d;
+  --dark-brown: #231f20;
+  --light-brown: #5b4b50;
 
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
