--- a/src/app/components/ComponentsList/ComponentItem/ComponentItemNavBar/ComponentItemNavBar.module.css
+++ b/src/app/components/ComponentsList/ComponentItem/ComponentItemNavBar/ComponentItemNavBar.module.css
@@ -11,5 +11,5 @@
   place-items: center;
   gap: 0.2rem;
   padding: 0.7rem;
-  background-color: #ededed;
+  background-color: var(--secondary-color);
 }
