--- a/src/app/components/ComponentsList/ComponentsList.module.css
+++ b/src/app/components/ComponentsList/ComponentsList.module.css
@@ -1,5 +1,4 @@
 .container {
-  background-color: #000;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -8,7 +7,7 @@
 
 .components_list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(300px, 100%), 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
   gap: 1rem;
 
   width: 100%;
