--- a/src/app/editor/components/LoginToPublishButton/LoginToPublishButton.module.css
+++ b/src/app/editor/components/LoginToPublishButton/LoginToPublishButton.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   gap: 0.5rem;
 
-  background-color: #000;
+  background-color: var(--dimmed-black);
   transition: background-color 0.2s ease-out;
 }
 
