--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  background-color: #f9f4ec;
+  background-color: var(--primary-color);
   color: var(--dimmed-black);
 
   --primary-color: #f9f4ec;
@@ -16,18 +16,18 @@
   --light-brown: #43383b;
   --dimmed-black: #1a202c;
 
+  --page-max-width: 1400px;
+
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 html {
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 body {
-  max-width: 1400px;
-  margin: 0 auto !important;
+  width: 100%;
 }
 
 a {
