[FEAT]: change page colors

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,8 +13,8 @@
   color: var(--dimmed-black);
 
   --primary-color: #f9f4ec;
-  --secondary-color: #e3d4d0;
-  --tertiary-color: #e4cec8;
+  --secondary-color: #ebd5cf;
+  --tertiary-color: #e8c6bc;
 
   --dark-brown: #231f20;
   --light-brown: #43383b;
