[FIX]: change images display for correct rendering in code preview

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  img {
+    @apply inline-block;
+  }
+}
 * {
   box-sizing: border-box;
   padding: 0;
