--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,7 @@
     @apply inline-block;
   }
 }
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -68,6 +69,7 @@ button:focus {
 }
 
 input {
+  width: 100%;
   max-width: 100%;
 
   padding: 0.5rem 1rem;
