[FIX]: force global images display to prevent wrong rendering in canvas

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -93,6 +93,7 @@ img {
   max-width: 100%;
   height: auto;
   object-fit: cover;
+  display: inline-block !important;
 }
 
 @media screen and (max-width: 768px) {
