[FEAT]: style component page tabs

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -65,7 +65,7 @@ button:disabled {
 textarea:focus,
 input:focus,
 button:focus {
-  outline: 2px solid #000;
+  outline: 2px solid currentColor;
 }
 
 input {
